ADD_SUBDIRECTORY(common)

IF(UNIX)
  ADD_SUBDIRECTORY(ttcp)
ENDIF(UNIX)
ADD_SUBDIRECTORY(logd)
ADD_SUBDIRECTORY(appmacedon)
ADD_SUBDIRECTORY(appmacedon_test)
ADD_SUBDIRECTORY(filecopy)
ADD_SUBDIRECTORY(dht)
ADD_SUBDIRECTORY(unit_app)
ADD_SUBDIRECTORY(heartbeat)

#ADD_SUBDIRECTORY(simulator_common)
#ADD_SUBDIRECTORY(modelchecker)
#ADD_SUBDIRECTORY(simulator)
ADD_SUBDIRECTORY(maceTag)
ADD_SUBDIRECTORY(mg)
ADD_SUBDIRECTORY(chubby)
ADD_SUBDIRECTORY(PaxosAcceptorApp)
ADD_SUBDIRECTORY(MultiPaxosAcceptorApp)
ADD_SUBDIRECTORY(http)
IF(UNIX)
  ADD_SUBDIRECTORY(notify)
ENDIF(UNIX)
ADD_SUBDIRECTORY(filefind)
#ADD_SUBDIRECTORY(appgroupstream)

#ADD_SUBDIRECTORY(gameoflife)
#IF(CMAKE_PROJECT_NAME STREQUAL "Mace")
#  ADD_SUBDIRECTORY(logreader)
#ENDIF(CMAKE_PROJECT_NAME STREQUAL "Mace")

ADD_SUBDIRECTORY(cjtest)
ADD_SUBDIRECTORY(testrun)
ADD_SUBDIRECTORY(testcase)
ADD_SUBDIRECTORY(tagClientGUI)
